--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -53,7 +53,7 @@ draft%
 %\usepackage{lmodern} % FN: commented out since OMG wants its own fonts
 %\usepackage[scaled=.8]{beramono} % FN: commented out since OMG wants its own fonts
 \usepackage{courier}
-\usepackage{helvet}
+\usepackage[scaled=.9]{helvet}
 
 % set up Unicode symbols
 \DeclareUnicodeCharacter{21A6}{\ensuremath{\mapsto}}
@@ -1656,7 +1656,7 @@ For the purposes of this document, the following terms and definitions apply.
 
 
 
-\begin{definitions}
+%\begin{definitions}
 \termdefinition{native OMS}{An OMS that is written in exactly one OMS language.}
   \begin{example}
     An UML class diagram, an ontology written in OWL 2 EL, and  a specification written in CASLE are three different native OMS. 
