--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -7857,6 +7857,11 @@ The translation for  $\mathit{FunExpr} \leq \mathit{NumLiteral}$
 is analogous.
 
 
+\infannex{Conformance of Essential MOF with DOL}\label{a:EMOF}
+
+Since essential MOF (EMOF) is a sublanguage of UML class diagrams,
+we can define a corresponding institution that is a subinstitution
+of that for UML class diagrams (see annex~\ref{a:uml-class}).
 
 
 \infannex{Conformance of CASL with DOL}\label{a:casl}
@@ -9096,7 +9101,7 @@ mappings written in DOL and DOL-conforming languages.  It supports the
 same range of OMS languages and language translations as Hets (indeed,
 Hets is used for analyzing DOL files). The novel aspect w.r.t.\ Hets
 is the provision of git-based repositories and IRIs for libraries,
-OMS, symbols and mappings (see also Appendix~\ref{loc/id}).
+OMS, symbols and mappings (see also Annex~\ref{loc/id}).
 
 Users of Ontohub/Modelhub/Spechub can upload, browse, search and annotate 
 OMS in various languages via a web frontend, 
@@ -9219,8 +9224,8 @@ effort API4KB.
   {\end{itemize}}
 
 
-This appendix describes the way how Ontohub assigns IRIs to DOL
-libraries, OMS, symbols etc. Ontohub\footnote{In this appendix,
+This annex describes the way how Ontohub assigns IRIs to DOL
+libraries, OMS, symbols etc. Ontohub\footnote{In this annex,
   ``Ontohub'' could equally well be substituted by ``Modelhub'' and
   ``Spechub''.} is a reference implementation for DOL, and it is
 suggested that other tools supporting DOL should adopt the same or a
