how to ensure uniqueness of member end names in UML-CD

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -7460,7 +7460,10 @@ $1 \leq i \neq j \leq r$;\footnote{In UML, member end names need not be
   unique.  However, for (1)~a simpler handling of selecting a particular
   member end in the sentences and avoiding the use of number selectors,
   and (2)~making the notion of member ends ``owned'' by a class/data
-  type, we add this constraint.}
+  type, we add this constraint. An association declaration violating this
+  uniqueness constraints can easily be transformed into an association 
+  declaration satisfying it by decorating member end names with the
+  numbers $1,\ldots,r$.}
 
   \item the type of a member end\footnote{All member ends are instances
   of \uml{Property}; UML Superstructure Specification 2.4.1, p.~36; UML
