moved syntax of basic OMS to better place, typos

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -3889,7 +3889,7 @@ maximization, freeness (minimizing also data sets and equalities on these), and 
 % and HetCASL (see HetCASL summary)
 
 \ednote{ExtensionOMS seems to be missing from the abstract syntax}
-\begin{lstlisting}[language=ebnf,escapeinside={<>}]  % abstract syntax
+\begin{lstlisting}[language=ebnf,escapeinside={()}]  % abstract syntax
 
 BasicOMS = ($<$)language specific($>$) ;
 MinimizableOMS       = BasicOMS
@@ -4442,8 +4442,8 @@ both \syntax{\%inconsistent} and \syntax{\%notmcons} are translated to
 \syntax{not-model-conservative}.
                        
                        
-\begin{lstlisting}[language=ebnf,escapeinside={<>},mathescape]
-BasicOMS = ($<$) language and serialization specific ($>$) ;
+\begin{lstlisting}[language=ebnf,escapeinside={()},mathescape]
+BasicOMS = ($<$)language and serialization specific($>$) ;
 MinimizableOMS      = BasicOMS
                      | OMSRef , [ ImportName ] ; 
                      
