removed three occurrences of "basic OMS language" that we agreed on, issue 126

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1504,7 +1504,7 @@ Independently from the conformance levels given above, there is the following hi
 \end{description}
 
 CURIEs that have a prefix may not be acceptable identifiers in every
-serialization of a basic OMS language, as the standard CURIE separator
+serialization of a  OMS language, as the standard CURIE separator
 character, the colon (\syntax{:}), may not be allowed in identifiers.
 \CLnote[type=q-all]{I recall that in the 2012-04-18 teleconference we
   agreed on this – but does it really make sense?  Are there any
@@ -4294,7 +4294,7 @@ Bindings in a prefix map are evaluated from left to right.  Authors \shouldnot b
 
 \ssclause{Mapping identifiers in basic OMS to IRIs}\label{c:map-ids}
 
-While DOL uses IRIs as identifiers throughout, basic OMS languages do not necessarily do; for example:
+While DOL uses IRIs as identifiers throughout, OMS languages do not necessarily do; for example:
 \begin{itemize}
 \item OWL \nisref{W3C/TR REC-owl2-syntax:2009, Section 5.5} does use IRIs.
 \item Common Logic \nisref{ISO/IEC 24707:2007} supports them but does not enforce their use.
@@ -4304,7 +4304,7 @@ However, DOL OMS mappings as well as
 %\CLnote[type=todo]{maybe clarify which ones, by checking the grammar for all occurrences of SymbolRef}
 certain operations on OMS require making unambiguous references to non-logical symbols of basic OMS (\syntax{SymbolRef}).  Therefore, DOL provides a function that maps global identifiers used within basic OMS to IRIs.  This mapping affects all non-logical symbol identifiers (such as class names in an OWL ontology), but not locally-scoped identifiers such as bound variables in Common Logic ontologies.  DOL reuses the CURIE mechanism for abbreviating IRIs for this purpose (\cf \cref{c:curies}).
 
-CURIEs that have a prefix may not be acceptable identifiers in every serialization of a basic OMS language,
+CURIEs that have a prefix may not be acceptable identifiers in every serialization of an OMS language,
 as the standard CURIE separator character, the colon (\syntax{:}), may not be allowed in identifiers.  
 %\CLnote[type=q-all]{I recall that in the 2012-04-18 teleconference we agreed on this – but does it really make sense?  Are there any relevant OMS language serializations that do not allow : in identifiers (or that do allow it theoretically but discourage it in practice) but allow some other non-letter character?}
 Therefore, the declaration of DOL-conformance of the respective serialization (cf.\ \cref{c:conform:serialization}) \may define an \emph{alternative CURIE separator character}, or it \may forbid the use of prefixed CURIEs altogether.
